--- a/_posts/2025-04-07-skillz.md
+++ b/_posts/2025-04-07-skillz.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "💻 _Skillz: A Terminal-Based Dev Skill Tracker"
+title: "Skillz: A Terminal-Based Dev Skill Tracker"
 date: 2025-04-07
 categories: Python
 author: "Hardik Jaiswal"
