docs(_posts/2025-04-07-skillz.md): Updated Skillz description

--- a/_posts/2025-04-07-skillz.md
+++ b/_posts/2025-04-07-skillz.md
@@ -12,7 +12,7 @@ That quote hit different when I realized I had no real idea how well I knew the 
 
 <br/>
 
-### 🧠 What is Skillz?
+### What is Skillz?
 
 Skillz is a **CLI (Command Line Interface)** tool built with Python that lets you:
 - Add and update programming languages you’re learning
